# sandbox-django-group-join-request

./: .flake8  .gitignore  .unibeautifyrc.yml  README.md  noxfile.py  pyproject.toml
diagrams/: request_post.pu
sample1/: manage.py
sample1/join_request/: apps.py  forms.py  models.py  rules.py  urls.py  views.py
sample1/join_request/migrations/: 0001_initial.py  0002_requestpost_is_open.py  0003_alter_requestpost_options.py  0004_alter_requestpost_options.py
sample1/join_request/templates/: base.html
sample1/join_request/templates/join_request/: home.html  requestpost_detail.html  requestpost_form.html  requestpost_list.html
sample1/sample1/: account_adapter.py  asgi.py  settings.py  urls.py  wsgi.py
sample1/templates/: base.html  home.html
