[tool.black]
line-length = 120
exclude = [
    "**/migrations/*",
]

[tool.isort]
profile = "black"
line_length = 120
skip_glob = [
    "**/migrations/*.py",
]
force_single_line = true
import_heading_stdlib      = "Standard Library"
import_heading_thirdparty  = "Third Party Library"
import_heading_firstparty  = "First Party Library"
import_heading_localfolder = "Local Library"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = [
    "allauth.*",
    "environ"
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "sample1.settings"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-rxX",
    "--capture=no",
    "-pno:logging",
    # "--cov",
    # "--cov-append",
    # "--cov-report=term-missing",
]
testpaths = "sample1/tests"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]
DJANGO_SETTINGS_MODULE = "sample1.settings"

[tool.poetry]
name = "sandbox-django-group-join-request"
version = "0.1.0"
description = ""
authors = ["pollenjp <polleninjp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
django-environ = "^0.8.1"
django-allauth = "^0.47.0"
rules = "^3.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
autoflake8 = "^0.3.0"
isort = "^5.10.1"
mypy = "^0.931"
nox = "^2022.1.7"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
django-stubs = "^1.9.0"
pytest-factoryboy = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
